# student_grade_management

./: CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  GradeManager.cpp  GradeManager.h  LICENSE  MAIN.CPP  MainWindow.cpp  MainWindow.h  README.md  Student.cpp  Student.h  desktop.ini  main.cpp  student_grade_management.cpp  students.txt
c++ version/: ChartWidget.cpp  MainWindow.cpp  student_grade_management.cpp  styles.qss
